[package]
name = "xunit-repo-interface"
version = "0.0.1"
authors = ["Owen Synge <osynge@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
xunit-struct = { git = "https://github.com/osynge/xunit-struct.git", branch = "main" }